force-app/main/default/objects/Skills__c/Skills__c.object-meta.xml
<CustomObject>
    <label>Skills</label>
    <nameField>
        <displayFormat>SK-{000000}</displayFormat>
        <label>Skills Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>