force-app/main/default/objects/Skills__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Experience &amp; Skills</relationshipLabel>
    <relationshipName>Skills</relationshipName>
    <type>Lookup</type>
</CustomField>