force-app/main/default/objects/Skills__c/fields/IndustryKnowledge__c.field-meta.xml
<CustomField>
    <fullName>IndustryKnowledge__c</fullName>
    <label>Industry Knowledge</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Association / Not for Profit</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Banking / Finance / Insurance</fullName>
            </value>
            <value>
                <fullName>Beauty / Fashion / Luxury Goods</fullName>
            </value>
            <value>
                <fullName>Communication / Media / Social Media</fullName>
            </value>
            <value>
                <fullName>Construction / Real Estate</fullName>
            </value>
            <value>
                <fullName>Consulting / Service Provider / Agency</fullName>
            </value>
            <value>
                <fullName>Consumer Packaged Goods</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Energy / Utilities</fullName>
            </value>
            <value>
                <fullName>Entertainment / Sports / Films</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Healthcare / Pharma / Chemicals</fullName>
            </value>
            <value>
                <fullName>Hospitality / Hotel / Tourism</fullName>
            </value>
            <value>
                <fullName>Industry / Manufacturing / Printing</fullName>
            </value>
            <value>
                <fullName>Private Person</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Technology / IT / Engineering / Electro</fullName>
            </value>
            <value>
                <fullName>Transportation / Shipping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>