force-app/main/default/objects/Skills__c/fields/InternalContact__c.field-meta.xml
<CustomField>
    <fullName>InternalContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Skills</relationshipLabel>
    <relationshipName>Skills</relationshipName>
    <type>Lookup</type>
</CustomField>