force-app/main/default/objects/Skills__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <label>Network</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>