force-app/main/default/objects/Skills__c/fields/PersonalInterests__c.field-meta.xml
<CustomField>
    <fullName>PersonalInterests__c</fullName>
    <label>Personal Interests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>