force-app/main/default/objects/Skills__c/recordTypes/Alumni.recordType-meta.xml
<RecordType>
    <fullName>Alumni</fullName>
    <active>true</active>
    <label>Alumni</label>
</RecordType>