force-app/main/default/objects/Skills__c/recordTypes/CustomerProjects.recordType-meta.xml
<RecordType>
    <fullName>CustomerProjects</fullName>
    <active>true</active>
    <label>Customer Projects</label>
</RecordType>