force-app/main/default/objects/Skills__c/recordTypes/Industry_Knowledge.recordType-meta.xml
<RecordType>
    <fullName>Industry_Knowledge</fullName>
    <active>true</active>
    <label>Industry Knowledge</label>
</RecordType>