force-app/main/default/objects/Skills__c/recordTypes/Languages.recordType-meta.xml
<RecordType>
    <fullName>Languages</fullName>
    <active>true</active>
    <label>Languages</label>
</RecordType>