force-app/main/default/objects/Skills__c/recordTypes/MotivationPersonalInterest.recordType-meta.xml
<RecordType>
    <fullName>MotivationPersonalInterest</fullName>
    <active>true</active>
    <label>Motivation/Personal Interest</label>
</RecordType>